--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,4 +9,4 @@ jobs:
     - name: Run Django unit tests
       run: |
         pip3 install --user django
-        python3 airline0/manage.py test
+        python3 airline0/manage.py airline0/flights/tests.py
