--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,8 @@
 name: Testing
-on: push
+on: 
+  push:
+    branches:
+      - 'airline0'
 
 jobs:
   test_project:
@@ -9,4 +12,4 @@ jobs:
     - name: Run Django unit tests
       run: |
         pip3 install --user django
-        python3 airline0/manage.py test
+        python3 manage.py test
