--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,4 +12,4 @@ jobs:
     - name: Run Django unit tests
       run: |
         pip3 install --user django
-        python3 manage.py test
+        python3 airline0/manage.py test
